[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wincode = { version = "0.4.5", features = ["derive"] }
pinocchio = "0.10.2"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
pinocchio-pubkey = { git = "https://github.com/anza-xyz/pinocchio.git" }
pinocchio-log = "0.5.1"
pinocchio-associated-token-account = "0.3.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
wincode = { version = "0.4.5", features = ["derive"] }
litesvm = "0.9.1"
litesvm-token = "0.9.1"

solana-instruction = "3.1.0"
solana-keypair = "3.1.0"
solana-native-token = "3.0.0"
solana-pubkey = "4.1.0"
solana-signer = "3.0.0"
solana-transaction = "3.0.2"
solana-message = "3.0.1"
solana-sdk-ids = "3.1.0"
spl-token-2022 = { version = "10.0.0", features = ["no-entrypoint"]}
spl-associated-token-account = "8.0.0"
solana-rpc-client = "3.1.9"
solana-address = "2.2.0"
solana-account = "4.1.0"